chandeliers-lus/tests/compile_fail/ui/tc/const/fby.stderr
error: The delay operator (-> / fby) is not valid in const contexts
 --> tests/compile_fail/ui/tc/const/fby.rs:3:21
  |
3 |     const X : int = 0 fby 1 fby 2;
  |                     ^^^^^^^^^^^^^
  |
  = note: You must put this definition inside a node
